[gd_scene load_steps=13 format=3 uid="uid://bbmdp63cwku5e"]

[ext_resource type="Script" path="res://scenes/hud.gd" id="1_bv657"]
[ext_resource type="FontFile" uid="uid://omargf2labe" path="res://Assets/fonts/Robot Crush.ttf" id="2_ga6r0"]
[ext_resource type="Texture2D" uid="uid://dvi54gybw336b" path="res://Assets/Controls/gdb-keyboard-2.png" id="3_ak3j0"]
[ext_resource type="Texture2D" uid="uid://tr5rdwvg3brg" path="res://Assets/Controls/gdb-playstation-2.png" id="3_wr2rx"]
[ext_resource type="Texture2D" uid="uid://rdwslsowfsmu" path="res://Assets/Controls/gdb-xbox-2.png" id="4_atsku"]
[ext_resource type="Texture2D" uid="uid://d1q2g8bpf7atj" path="res://Assets/Controls/gdb-switch-2.png" id="4_f2j07"]
[ext_resource type="PackedScene" uid="uid://c6oi3wlnv8t7i" path="res://scenes/controls_hint.tscn" id="7_l6pur"]

[sub_resource type="AtlasTexture" id="AtlasTexture_vwlf2"]
atlas = ExtResource("3_ak3j0")
region = Rect2(32, 128, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_eofa4"]
atlas = ExtResource("4_f2j07")
region = Rect2(112, 129, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_36oad"]
atlas = ExtResource("3_wr2rx")
region = Rect2(336, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_a58wa"]
atlas = ExtResource("4_atsku")
region = Rect2(16, 112, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_rfdaj"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vwlf2")
}],
"loop": true,
"name": &"keyboard",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_eofa4")
}],
"loop": true,
"name": &"nintendo",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_36oad")
}],
"loop": true,
"name": &"playstation",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_a58wa")
}],
"loop": true,
"name": &"xbox",
"speed": 5.0
}]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_bv657")

[node name="ScoreLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -53.0
offset_right = 53.0
offset_bottom = 78.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_ga6r0")
theme_override_font_sizes/font_size = 64
text = "0
"
horizontal_alignment = 1

[node name="Message" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -306.5
offset_top = -39.0
offset_right = 306.5
offset_bottom = 39.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("2_ga6r0")
theme_override_font_sizes/font_size = 64
horizontal_alignment = 1

[node name="LevelLabel" type="Label" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -247.0
offset_bottom = 78.0
grow_horizontal = 0
theme_override_fonts/font = ExtResource("2_ga6r0")
theme_override_font_sizes/font_size = 64
text = "Level 0"

[node name="DeathSkipArea" type="Area2D" parent="."]
visible = false
position = Vector2(3840, 2160)

[node name="DeathSkipLabel" type="Label" parent="DeathSkipArea"]
offset_left = -245.0
offset_top = -166.0
offset_right = -40.0
offset_bottom = -80.0
theme_override_fonts/font = ExtResource("2_ga6r0")
theme_override_font_sizes/font_size = 64
text = "to exit"

[node name="DeathSkipSprite" type="AnimatedSprite2D" parent="DeathSkipArea"]
position = Vector2(-325, -128)
scale = Vector2(6, 6)
sprite_frames = SubResource("SpriteFrames_rfdaj")
animation = &"keyboard"

[node name="HeartArea" type="Area2D" parent="."]

[node name="BulletArea" type="Area2D" parent="."]
position = Vector2(0, 2160)

[node name="ControlsHint" parent="." instance=ExtResource("7_l6pur")]

[node name="ScoreTimer" type="Timer" parent="."]

[node name="DeathMessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="timeout" from="ScoreTimer" to="." method="_on_score_timer_timeout"]
[connection signal="timeout" from="DeathMessageTimer" to="." method="_on_death_message_timer_timeout"]
